--- a/kyoku-docker/mysql/user/proxy/proxysql.conf
+++ b/kyoku-docker/mysql/user/proxy/proxysql.conf
@@ -1,13 +1,11 @@
-datadir="/var/lib/proxysql"
+datadir="/var/lib/mysql"
 
-admin_variables=
-{
-    admin_credentials="admin:admin"
+admin_variables= {
+    admin_credentials="admin:admin" # replce with .env file
     mysql_ifaces="0.0.0.0:6032"
 }
 
-mysql_variables=
-{
+mysql_variables= {
     threads=4
     max_connections=2048
     default_query_delay=0
@@ -19,8 +17,8 @@ mysql_variables=
     stacksize=1048576
     server_version="8.0.33"
     connect_timeout_server=3000
-    monitor_username="monitor"
-    monitor_password="monitor"
+    monitor_username="monitor" # replce with .env file
+    monitor_password="monitor" # replce with .env file
     monitor_history=600000
     monitor_connect_interval=60000
     monitor_ping_interval=10000
@@ -30,31 +28,32 @@ mysql_variables=
     sessions_sort=true
 }
 
+
 mysql_servers =
 (
     {
-        address="db-primary"
+        address="user-primary"
         port=3306
         hostgroup=0
         weight=1000
         comment="Primary Server"
     },
     {
-        address="db-replica1"
+        address="user-replica1"
         port=3306
         hostgroup=1
         weight=900
         comment="Read Replica 1"
     },
     {
-        address="db-replica2"
+        address="user-replica2"
         port=3306
         hostgroup=1
         weight=900
         comment="Read Replica 2"
     },
     {
-        address="db-replica3"
+        address="user-replica3"
         port=3306
         hostgroup=1
         weight=900
@@ -65,8 +64,8 @@ mysql_servers =
 mysql_users =
 (
     {
-        username = "root"
-        password = "password"
+        username = "root" # replce with .env file
+        password = "password" # replce with .env file
         default_hostgroup = 0
         max_connections=1000
         default_schema="USER"
