--- a/kyoku-docker/mysql/user/proxy/proxysql.conf.template
+++ b/kyoku-docker/mysql/user/proxy/proxysql.conf.template
@@ -1,7 +1,7 @@
 datadir="/var/lib/mysql"
 
 admin_variables= {
-    admin_credentials="admin:admin" # replce with .env file
+    admin_credentials="{{MYSQL_USER_PROXY_ADMIN}}:{{MYSQL_USER_PROXY_PASSWORD}}"
     mysql_ifaces="0.0.0.0:6032"
 }
 
@@ -17,8 +17,8 @@ mysql_variables= {
     stacksize=1048576
     server_version="8.0.33"
     connect_timeout_server=3000
-    monitor_username="monitor" # replce with .env file
-    monitor_password="monitor" # replce with .env file
+    monitor_username="{{MYSQL_MONITOR_USER}}"
+    monitor_password="{{MYSQL_MONITOR_PASSWORD}}"
     monitor_history=600000
     monitor_connect_interval=60000
     monitor_ping_interval=10000
@@ -64,8 +64,8 @@ mysql_servers =
 mysql_users =
 (
     {
-        username = "root" # replce with .env file
-        password = "password" # replce with .env file
+        username = "{{MYSQL_USER_USER}}"
+        password = "{{MYSQL_USER_PASSWORD}}"
         default_hostgroup = 0
         max_connections=1000
         default_schema="USER"
