--- a/kyoku-docker/mysql/playlist/proxy/proxysql.conf.template
+++ b/kyoku-docker/mysql/playlist/proxy/proxysql.conf.template
@@ -1,7 +1,9 @@
+# TODO make sure prots does not conflict
+
 datadir="/var/lib/mysql"
 
 admin_variables= {
-    admin_credentials="{{MYSQL_USER_PROXY_ADMIN}}:{{MYSQL_USER_PROXY_PASSWORD}}"
+    admin_credentials="{{MYSQL_PLAYLIST_PROXY_ADMIN}}:{{MYSQL_PLAYLIST_PROXY_PASSWORD}}"
     mysql_ifaces="0.0.0.0:6032"
 }
 
@@ -17,8 +19,8 @@ mysql_variables= {
     stacksize=1048576
     server_version="8.0.33"
     connect_timeout_server=3000
-    monitor_username="{{MYSQL_USER_MONITOR_USER}}"
-    monitor_password="{{MYSQL_USER_MONITOR_PASSWORD}}"
+    monitor_username="{{MYSQL_PLAYLIST_MONITOR_USER}}"
+    monitor_password="{{MYSQL_PLAYLIST_MONITOR_PASSWORD}}"
     monitor_history=600000
     monitor_connect_interval=60000
     monitor_ping_interval=10000
@@ -32,43 +34,50 @@ mysql_variables= {
 mysql_servers =
 (
     {
-        address="user-primary"
+        address="playlist-primary"
         port=3306
         hostgroup=0
         weight=1000
         comment="Primary Server"
     },
     {
-        address="user-replica1"
+        address="playlist-replica1"
         port=3306
         hostgroup=1
         weight=900
         comment="Read Replica 1"
     },
     {
-        address="user-replica2"
+        address="playlist-replica2"
         port=3306
         hostgroup=1
         weight=900
         comment="Read Replica 2"
     },
     {
-        address="user-replica3"
+        address="playlist-replica3"
         port=3306
         hostgroup=1
         weight=900
         comment="Read Replica 3"
+    },
+    {
+        address="playlist-replica4"
+        port=3306
+        hostgroup=1
+        weight=900
+        comment="Read Replica 4"
     }
 )
 
 mysql_users =
 (
     {
-        username = "{{MYSQL_USER_USER}}"
-        password = "{{MYSQL_USER_PASSWORD}}"
+        username = "{{MYSQL_PLAYLIST_USER}}"
+        password = "{{MYSQL_PLAYLIST_PASSWORD}}"
         default_hostgroup = 0
         max_connections=1000
-        default_schema="USER"
+        default_schema="PLAYLIST"
         active = 1
     }
 )
