--- a/kyoku-docker/mysql/user/sql/setup-replication-master.sql.template
+++ b/kyoku-docker/mysql/user/sql/setup-replication-master.sql.template
@@ -3,10 +3,10 @@ CREATE USER IF NOT EXISTS '{{MYSQL_USER_REPLICATION_USER}}'@'%' IDENTIFIED WITH 
 GRANT REPLICATION SLAVE ON *.* TO '{{MYSQL_USER_REPLICATION_USER}}'@'%';
 
 -- Create monitor user for ProxySQL
-CREATE USER IF NOT EXISTS '{{MYSQL_MONITOR_USER}}'@'%' IDENTIFIED WITH caching_sha2_password BY '{{MYSQL_MONITOR_PASSWORD}}';
-GRANT REPLICATION CLIENT ON *.* TO '{{MYSQL_MONITOR_USER}}'@'%';
-GRANT PROCESS ON *.* TO '{{MYSQL_MONITOR_USER}}'@'%';
-GRANT SELECT ON performance_schema.* TO '{{MYSQL_MONITOR_USER}}'@'%';
+CREATE USER IF NOT EXISTS '{{MYSQL_USER_MONITOR_USER}}'@'%' IDENTIFIED WITH caching_sha2_password BY '{{MYSQL_USER_MONITOR_PASSWORD}}';
+GRANT REPLICATION CLIENT ON *.* TO '{{MYSQL_USER_MONITOR_USER}}'@'%';
+GRANT PROCESS ON *.* TO '{{MYSQL_USER_MONITOR_USER}}'@'%';
+GRANT SELECT ON performance_schema.* TO '{{MYSQL_USER_MONITOR_USER}}'@'%';
 
 -- Ensure root user can connect from anywhere
 CREATE USER IF NOT EXISTS '{{MYSQL_USER_USER}}'@'%' IDENTIFIED WITH caching_sha2_password BY '{{MYSQL_USER_PASSWORD}}';
