--- a/kyoku-docker/mysql/playlist/proxy/proxysql.conf
+++ b/kyoku-docker/mysql/playlist/proxy/proxysql.conf
@@ -1,7 +1,7 @@
 datadir="/var/lib/mysql"
 
 admin_variables= {
-    admin_credentials="{{MYSQL_PLAYLIST_PROXY_ADMIN}}:{{MYSQL_PLAYLIST_PROXY_PASSWORD}}"
+    admin_credentials="admin:admin"
     mysql_ifaces="0.0.0.0:6032"
 }
 
@@ -17,8 +17,8 @@ mysql_variables= {
     stacksize=1048576
     server_version="8.0.33"
     connect_timeout_server=3000
-    monitor_username="{{MYSQL_PLAYLIST_MONITOR_USER}}"
-    monitor_password="{{MYSQL_PLAYLIST_MONITOR_PASSWORD}}"
+    monitor_username="monitor"
+    monitor_password="monitor"
     monitor_history=600000
     monitor_connect_interval=60000
     monitor_ping_interval=10000
@@ -71,8 +71,8 @@ mysql_servers =
 mysql_users =
 (
     {
-        username = "{{MYSQL_PLAYLIST_USER}}"
-        password = "{{MYSQL_PLAYLIST_PASSWORD}}"
+        username = "root"
+        password = "password"
         default_hostgroup = 0
         max_connections=1000
         default_schema="PLAYLIST"
